0.1 10apr23
* initial version
0.2
* special accumulator for ww and wawa
* fix shutDown function
* fix night determination in examples
* more postprocessing for ww and wawa
0.3
* present weather postprocessing rewritten
* configurable field and record separator
* self-monitor tcp/udp connection
* replace time.sleep() by Event.wait() to better support shutdown
* added METAR to presentweather_list
* added intsum and dursum to presentweather_list
0.4
* reordered presentweather_list
* added METAR to thread database
* added WeeWX-table-like view to thread database
* fix bug that prevents start of precipitation timestamps being saved in short interruptions
* support for different telegram types of Thies LNM
0.5
* added rainRate and rain to thread database
* new observation type rainDur
0.6 11jun23
* changed ww2x/wawa2x algorithm
* process OTT Parsivel2 field no. 61
0.7 16jul23
* special `max` algorithm for `ww` and `wawa`
* aggregation type `wmo_W1`, `wmo_W2`, `wmo_Wa1` and `wmo_Wa2`
* frost indicator according to German Weather Service DWD
* observation type `frostIndicator`
* handle firmware error of Ott Parsivel2 that erroneously produces ww62
* AWEKAS support
* divide PrecipThread.presentweather() into 2 parts
* replace special accumulators by providing the archive record by the thread
* changed detection of erroneous readings
* added `presentweatherWw` and `presentweatherWawa`
0.8
* intensity level check
* log traceback for certain errors
* default decimals and unit label for `millivolt`, `decivolt`, and `milliamp`
* fix bug that caused a thread crash for ww 24, 27, and 29
* added configurable database timeout
* fix frost indicator
* 1 hour past weather observation types